# ffiasm-test

./: CMakeLists.txt  sync_ffiasm_tests.sh
.github/workflows/: ffiasm.yml
